# flash-attention

./: .clangd  .gitignore  .gitmodules  README.md  pyproject.toml
benchmarks/: memory.py  runtime.py
src/flash_attention/: __init__.py  triton.py
src/flash_attention/cuda/: __init__.py  mha_fwd.cpp  mha_fwd.cu  mha_fwd.py
src/flash_attention/utils/: __init__.py  baseline.py  benchmark.py  testing.py
tests/: test_cuda.py  test_triton.py
